infrastructure/cyberchef/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyberchef
  labels:
    app: cyberchef
    service: cyberchef
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: cyberchef
