infrastructure/cyberchef/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cyberchef
spec:
  parentRefs:
  - name: main
    namespace: envoy-system
    sectionName: https
  hostnames:
    - "kebab.hackcorp.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: cyberchef
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
